tests/syntax_tests/data/parsing/errors/expressions/arrow.res
Object.keys(providers).reduce((elements, providerId] => {
  let x = 1
  let b = 2
  x + b
})
